Removed "value" support Reversed "Is Member Of" relationship Made tests conditional Code tidy